--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,26 @@
 #localhost:8080/h2
 spring.h2.console.path=/h2
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:~/test
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.url=jdbc:h2:~/test
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.datasource.driver-class-name=org.h2.Driver
+
+#spring.datasource.initialize=false
+
+# Primary DataSource configuration
+
+datasource.primary.url=jdbc:h2:~/testa
+datasource.primary.username=sa
+datasource.primary.password=
+datasource.primary.driver-class-name=org.h2.Driver
+datasource.primary.jdbcUrl=jdbc:h2:~/test1
+
+# Any of the other Spring supported properties below...
+
+# Secondary DataSource configuration
+datasource.secondary.url=jdbc:h2:~/testb
+datasource.secondary.username=sa
+datasource.secondary.password=
+datasource.secondary.driver-class-name=org.h2.Driver
+datasource.secondary.jdbcUrl=jdbc:h2:~/test2
